--- a/SportsStore/Views/Home/Index.cshtml
+++ b/SportsStore/Views/Home/Index.cshtml
@@ -1,1 +1,16 @@
-﻿<h4>Welcome to SportsStore</h4>
+﻿@using SportsStore.Models.ViewModels
+@model ProductsListViewModel
+
+
+@foreach (var p in Model.Products)
+{
+    <partial name="ProductSummary" model="p" />
+}
+
+<div page-model="@Model.PagingInfo" page-action="Index" page-classes-enabled="true"
+     page-class="btn" page-class-normal="btn-outline-dark"
+     page-class-selected="btn-primary" class="btn-group pull-right m-1">
+</div>
+
+<div page-model="@Model.PagingInfo" page-action="Index"></div>
+
